[package]
name = "ejemplo-gtk01"
version = "0.1.0"
authors = ["Clase de Graficación primavera 2021"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.9.2"
gio = "0.9.1"

[[bin]]
name = "basic"

